--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
     <noscript>
       <strong>We're sorry but vuefilm doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <style>
+      #app{ display: flex; height:100%;}
+      #app div{ margin : auto;}
+    </style>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
