代码修改提交

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
   <head>
+    <!-- 声明页面使用的编码 -->
     <meta charset="utf-8">
+    <!-- 告诉IE优先使用最新引擎渲染网页 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- 移动端适配 -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+    <!-- 禁止百度转码 -->
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <!-- webapp全屏模式 -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- 添加到主屏后的标题 -->
+    <meta name="apple-mobile-web-app-title" content="标题">
+    <!-- 添加到主屏幕app图标 -->
+    <link rel="apple-touch-icon-precomposed" href="<%= BASE_URL %>24hlogo.png">
+    <!-- 添加 favicon icon -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="<%= BASE_URL %>css/common.css">
     <link rel="stylesheet" href="<%= BASE_URL %>css/iconfont/iconfont.css">
